# ncore

./: .bazelignore  .bazelrc  .cog.toml  .gitignore  ATTRIBUTIONS.md  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULE.bazel  README.md  SECURITY.md  pyproject.toml
.github/: copy-pr-bot.yaml
.github/actions/setup-bazel/: action.yml
.github/workflows/: ci.yml  commit-lint.yml
bazel/format/: BUILD.bazel  ruff_isort.sh
bazel/oci/: py_layer.bzl
bazel/pytest/: BUILD.bazel  defs.bzl  pytest_wrapper.py
bazel/repo/: repos.bzl
bazel/sphinx/: BUILD.bazel  defs.bzl  sphinx_wrapper.py
bazel/typing/: BUILD.bazel  aspects.bzl  mypy.ini
docs/: BUILD.bazel  README.md  conf.py  index.rst
docs/_static/: style.css
docs/_templates/: layout.html
docs/apis/: data.rst  data.v4.rst  data_converter.rst  install.rst  ncore.rst  sensors.rst
docs/conversions/colmap/: colmap.rst
docs/conversions/pai/: pai.rst
docs/conversions/waymo/: waymo.rst
docs/data/: conventions.rst  formats.rst  overview.rst  sensor_models.rst  storage_and_access.rst
docs/tools/: data_vis.rst  ncore_vis.rst
ncore/: BUILD.bazel  PYPI_README.md  README.md
ncore/data/: BUILD.bazel  __init__.py  test.py
ncore/data/v4/: BUILD.bazel  __init__.py  test.py
ncore/data_converter/: BUILD.bazel  __init__.py  test.py
ncore/impl/common/: BUILD.bazel  transformations.py  transformations_test.py  util.py
ncore/impl/data/: BUILD.bazel  compat.py  stores.py  stores_test.py  types.py  util.py  util_test.py
ncore/impl/data/v4/: BUILD.bazel  compat.py  compat_test.py  components.py  components_test.py  types.py
ncore/impl/data_converter/: BUILD.bazel  base.py
ncore/impl/sensors/: BUILD.bazel  camera.py  camera_test.py  common.py  lidar.py  lidar_test.py
ncore/impl/sensors/test_data/: row-offset-spinning-lidar-model-parameters-hesai-at128.json  row-offset-spinning-lidar-model-parameters-pandaset.json  row-offset-spinning-lidar-model-parameters-waymo.json  row-offset-spinning-lidar-model-parameters.json
ncore/sensors/: BUILD.bazel  __init__.py  test.py
tools/: BUILD.bazel  cli.py  debug.py  ncore_export_camera.py  ncore_export_colored_pc.py  ncore_export_ply.py  ncore_project_pc_to_img.py  ncore_sequence_meta.py  ncore_visualize_labels.py  vis.py
tools/data_converter/: BUILD.bazel  README.md  cli.py
tools/data_converter/colmap/: BUILD.bazel  NOTICE  README.md  converter.py  scene_manager.py
tools/data_converter/pai/: BUILD.bazel  README.md  converter.py  data_provider.py  utils.py
tools/data_converter/pai/pai-clip-dl/: BUILD.bazel  README.md
tools/data_converter/pai/pai-clip-dl/pai_clip_dl/: __init__.py  cli.py  config.py  downloader.py  index.py  remote.py  streaming.py
tools/data_converter/pai/pai_remote/: BUILD.bazel  README.md  cli.py  config.py  downloader.py  index.py  pyproject.toml  remote.py  streaming.py
tools/data_converter/waymo/: BUILD.bazel  NOTICE  README.md  converter.py  deps.py  proto_utils.py  utils.py  waymo_range_image_utils.py
tools/ncore_vis/: BUILD.bazel  README.md  cli.py  data_loader.py  renderer.py  server.py  utils.py
tools/ncore_vis/components/: __init__.py  base.py  camera.py  cuboids.py  lidar.py  radar.py  trajectory.py
