# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Formatting target aliases for convenience
alias(
    name = "format",
    actual = "//bazel/format:format",
)

alias(
    name = "format.check",
    actual = "//bazel/format:format.check",
)

# Package group representing all code-related sub-packages
package_group(
    name = "code_package_group",
    packages = [
        "//ncore/...",
        "//tools/...",
    ],
)
