# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
This module defines the dependencies and extensions for the NCore project.
"""

module(
    name = "ncore",
    repo_name = "ncore_repo",
)

bazel_dep(name = "aspect_rules_lint", version = "1.9.1")
bazel_dep(name = "rules_mypy", version = "0.40.0")
bazel_dep(name = "rules_uv", version = "0.88.0")
bazel_dep(name = "rules_shell", version = "0.5.0")
bazel_dep(name = "rules_multirun", version = "0.13.0")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "platforms", version = "1.0.0")

## rules_python
bazel_dep(name = "rules_python", version = "1.2.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
python.toolchain(
    python_version = "3.8",
)
use_repo(python, "python_3_11", "python_3_8", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    experimental_index_url = "https://pypi.org/simple",  # download wheels via bazel downloader instead of pip
    hub_name = "ncore_pip_deps",
    python_version = "3.11",
    requirements_lock = "//deps/pip:requirements_3_11.txt",
)
pip.parse(
    experimental_index_url = "https://pypi.org/simple",  # download wheels via bazel downloader instead of pip
    hub_name = "ncore_pip_deps",
    python_version = "3.8",
    requirements_lock = "//deps/pip:requirements_3_8.txt",
)
use_repo(pip, "ncore_pip_deps")

## rules_multitool (for ruff formatter)
bazel_dep(name = "rules_multitool", version = "1.0.0")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
use_repo(multitool, "multitool")

## external / test data
# GitHub Packages requires authentication - configure ~/.netrc with GitHub credentials as described in `CONTRIBUTING.md`

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# unit test data
http_archive(
    name = "test-data-v4",
    sha256 = "c9f52f182994b5c4027f74f380b75f05bc64bdc15ccc2934558f373b44606ae9",
    urls = ["https://maven.pkg.github.com/NVIDIA/ncore/com/nvidia/ncore/test-data-v4/0.2/test-data-v4-0.2.tar.gz"],
)

# documentation binary data
http_archive(
    name = "ncore_docs_data",
    sha256 = "e79f4dbe5935c4fb1326da1f11226b8ffa2ffa124053b0cdd8b3bda859afb646",
    urls = ["https://maven.pkg.github.com/NVIDIA/ncore/com/nvidia/ncore/ncore-docs-data/0.3/ncore-docs-data.tar.gz"],
)

# Waymo Open Dataset (http_archive for proto definitions)
http_archive(
    name = "waymo_open_dataset",
    patch_strip = 2,
    patches = ["//deps/waymo-open-dataset:cc-proto.patch"],
    sha256 = "5e91fea02a0cdb1edb39d9ac27fbdb1e8d890986faab545497a95b54213b973d",
    strip_prefix = "waymo-open-dataset-1.5.1/src",
    urls = ["https://github.com/waymo-research/waymo-open-dataset/archive/refs/tags/v1.5.1.tar.gz"],
)
