# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "ruff-isort",
    srcs = [
        "ruff_isort.sh",
    ],
    data = [
        "@multitool//tools/ruff",
    ],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

format_multirun(
    name = "format",
    # Currently `ruff format` does not support sort import so this is a workaround
    # of `python = "@multitool//tools/ruff"`.
    # See more at https://docs.astral.sh/ruff/formatter/#sorting-imports.
    python = ":ruff-isort",
    starlark = "@buildifier_prebuilt//:buildifier",
    starlark_check_args = [
        "--mode=diff",
        "--lint=warn",
    ],
    starlark_fix_args = [
        "--lint=fix",
    ],
    visibility = [
        # Add visibility for //:format
        "//:__pkg__",
    ],
)
