# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "sphinx_wrapper",
    srcs = ["sphinx_wrapper.py"],
    visibility = ["//docs:__subpackages__"],
    deps = [
        requirement("ipython"),
        requirement("nbsphinx"),
        requirement("pexpect"),
        requirement("sphinx"),
        requirement("sphinx_rtd_theme"),
        "@ncore_repo//ncore/data:pylib",
        "@ncore_repo//ncore/data/v4:pylib",
        "@ncore_repo//ncore/data_converter:pylib",
        "@ncore_repo//ncore/sensors:pylib",
    ],
)
