# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")
load(
    "//bazel/pytest:defs.bzl",
    "pytest_test",
)

package(default_visibility = ["//:code_package_group"])

py_library(
    name = "pylib_util",
    srcs = [
        "util.py",
    ],
    deps = [
        requirement("universal_pathlib"),
    ],
)

py_library(
    name = "pylib_transformations",
    srcs = [
        "transformations.py",
    ],
    deps = [
        ":pylib_util",
        requirement("numpy"),
        requirement("scipy"),
    ],
)

pytest_test(
    name = "test",
    srcs = glob(["*test.py"]),
    data = [
        "@test-data-v4//:dataset0",
    ],
    deps = [
        ":pylib_transformations",
        "//ncore/impl/data:pylib_types",
        "//ncore/impl/data/v4:pylib_compat",
        "//ncore/impl/data/v4:pylib_components",
        requirement("numpy"),
        requirement("scipy"),
        "@rules_python//python/runfiles",
    ],
)
