# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")
load("//bazel/pytest:defs.bzl", "pytest_test")

package(default_visibility = ["//:code_package_group"])

py_library(
    name = "pylib_common",
    srcs = [
        "common.py",
    ],
    deps = [
        requirement("numpy"),
        requirement("torch"),
    ],
)

py_library(
    name = "pylib_camera",
    srcs = [
        "camera.py",
    ],
    deps = [
        ":pylib_common",
        "//ncore/impl/common:pylib_util",
        "//ncore/impl/data:pylib_types",
        requirement("numpy"),
        requirement("torch"),
    ],
)

pytest_test(
    name = "pytest_camera",
    srcs = [
        "camera_test.py",
    ],
    deps = [
        ":pylib_camera",
        "//ncore/impl/data:pylib_types",
        requirement("numpy"),
        requirement("opencv_python_headless"),
        requirement("parameterized"),
        requirement("scipy"),
        requirement("torch"),
    ],
)

py_library(
    name = "pylib_lidar",
    srcs = [
        "lidar.py",
    ],
    deps = [
        ":pylib_common",
        "//ncore/impl/data:pylib_types",
        requirement("numpy"),
        requirement("scipy"),
        requirement("torch"),
    ],
)

pytest_test(
    name = "pytest_lidar",
    timeout = "long",
    srcs = [
        "lidar_test.py",
    ],
    data = [
        "//ncore/impl/sensors:test_data/row-offset-spinning-lidar-model-parameters.json",
        "//ncore/impl/sensors:test_data/row-offset-spinning-lidar-model-parameters-hesai-at128.json",
        "//ncore/impl/sensors:test_data/row-offset-spinning-lidar-model-parameters-pandaset.json",
        "//ncore/impl/sensors:test_data/row-offset-spinning-lidar-model-parameters-waymo.json",
    ],
    deps = [
        ":pylib_common",
        ":pylib_lidar",
        "//ncore/impl/common:pylib_transformations",
        "//ncore/impl/common:pylib_util",
        requirement("numpy"),
        requirement("parameterized"),
        requirement("torch"),
    ],
)
