# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

# Standalone CLI binary for converting Colmap data to NCore V4
py_binary(
    name = "convert",
    srcs = [
        "converter.py",
        "scene_manager.py",
    ],
    main = "converter.py",
    deps = [
        "@ncore_repo//ncore:pylib",
        "@pycolmap",
        requirement("click"),
        requirement("numpy"),
        requirement("tqdm"),
        requirement("universal_pathlib"),
        requirement("pillow"),
        "//tools/data_converter:pylib_cli",
    ],
)

alias(
    name = "colmap",
    actual = ":convert",
)
