# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

# Proxy for TensorFlow/Waymo dependencies - excludes mypy checking due to type annotation issues
py_library(
    name = "pylib_deps",
    srcs = ["deps.py"],
    tags = ["no-mypy"],  # syntax errors in type annotations of tensorflow / absl-py
    deps = [
        requirement("tensorflow"),
        "@waymo_open_dataset//waymo_open_dataset:dataset_proto_py_pb2",
        "@waymo_open_dataset//waymo_open_dataset:label_proto_py_pb2",
        "@waymo_open_dataset//waymo_open_dataset/protos:camera_segmentation_proto_py_pb2",
        "@waymo_open_dataset//waymo_open_dataset/utils:range_image_utils",
        "@waymo_open_dataset//waymo_open_dataset/utils:transform_utils",
    ],
)

# Fast-path protobuf parser for Waymo MatrixFloat / MatrixInt32 protos (NVIDIA-original)
py_library(
    name = "pylib_proto_utils",
    srcs = ["proto_utils.py"],
    deps = [
        requirement("numpy"),
    ],
)

# Modified Waymo range image utilities (Waymo Apache-2.0 + NVIDIA modifications)
py_library(
    name = "pylib_waymo_range_image_utils",
    srcs = ["waymo_range_image_utils.py"],
    deps = [
        ":pylib_deps",
        ":pylib_proto_utils",
        requirement("numpy"),
    ],
)

# NCore-specific utilities: pose extrapolation, batched point cloud conversion (NVIDIA-original)
py_library(
    name = "pylib_utils",
    srcs = ["utils.py"],
    deps = [
        ":pylib_deps",
        ":pylib_proto_utils",
        ":pylib_waymo_range_image_utils",
        requirement("numpy"),
        requirement("scipy"),
    ],
)

# Standalone CLI binary for converting Waymo data to NCore V4
py_binary(
    name = "convert",
    srcs = ["converter.py"],
    main = "converter.py",
    deps = [
        ":pylib_deps",
        ":pylib_utils",
        ":pylib_waymo_range_image_utils",
        requirement("click"),
        requirement("numpy"),
        requirement("tqdm"),
        requirement("universal_pathlib"),
        "//ncore:pylib",
        "//tools/data_converter:pylib_cli",
    ],
)

alias(
    name = "waymo",
    actual = ":convert",
)
