# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")
load("//bazel/pytest:defs.bzl", "pytest_test")

package(default_visibility = ["//:code_package_group"])

py_library(
    name = "pylib_types",
    srcs = [
        "types.py",
    ],
)

py_library(
    name = "pylib_components",
    srcs = [
        "components.py",
    ],
    deps = [
        ":pylib_types",
        "//ncore/impl/common:pylib_transformations",
        "//ncore/impl/common:pylib_util",
        "//ncore/impl/data:pylib_stores",
        "//ncore/impl/data:pylib_types",
        requirement("dataclasses_json"),
        requirement("numpy"),
        requirement("pillow"),
        requirement("universal_pathlib"),
        requirement("zarr"),
    ],
)

pytest_test(
    name = "pytest_components",
    srcs = ["components_test.py"],
    deps = [
        ":pylib_components",
        "//ncore/impl/common:pylib_transformations",
        "//ncore/impl/common:pylib_util",
        requirement("numpy"),
        requirement("parameterized"),
        requirement("pillow"),
        requirement("scipy"),
        requirement("universal_pathlib"),
    ],
)

py_library(
    name = "pylib_compat",
    srcs = [
        "compat.py",
    ],
    deps = [
        ":pylib_components",
        "//ncore/impl/common:pylib_transformations",
        "//ncore/impl/common:pylib_util",
        "//ncore/impl/data:pylib_compat",
        "//ncore/impl/data:pylib_types",
        requirement("numpy"),
        requirement("pillow"),
        requirement("typing_extensions"),
        requirement("universal_pathlib"),
    ],
)

pytest_test(
    name = "pytest_compat",
    srcs = ["compat_test.py"],
    data = [
        "@test-data-v4//:dataset0",
    ],
    deps = [
        ":pylib_compat",
        ":pylib_components",
        "//ncore/impl/common:pylib_util",
        requirement("numpy"),
        "@rules_python//python/runfiles",
    ],
)
